mlxrs/tests/ui-tests/stream_no_send.rs
fn assert_send<T: Send>() {}

fn main() {
  assert_send::<mlxrs::Stream>();
}
